Fixes select text overflow issues

--- a/templates/_form-components/select-component/select-component.scss
+++ b/templates/_form-components/select-component/select-component.scss
@@ -50,9 +50,9 @@ select-component{
         width: 100%;
         text-overflow: ellipsis;
         color: var(--neutral-700);
-        line-height: 1;
+        line-height: 2;
         height: 56px;
-        padding: 1.5rem 1rem 0.625rem;
+        padding: 1rem 1rem 0rem;
         border-radius: 0.25rem;
         border: 1px solid var(--neutral-300);
         box-shadow: none;
